<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    tools:context="com.example.chakradhar.weatherapp.AddLocationActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="-23dp"
        android:layout_marginRight="-23dp"
        android:layout_marginBottom="173dp"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/AppName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:ems="10"
        android:hint="@string/Location"
        android:inputType="textCapSentences"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="77dp" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="82dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_button"
        android:text="@string/EnterButton"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="329dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="228dp"
        android:layout_height="213dp"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-11dp"
        android:layout_marginLeft="-11dp"
        android:layout_marginTop="14dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button5"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="119dp"
        android:layout_marginLeft="119dp"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:layout_marginBottom="230dp"
        android:background="@drawable/rounded_button"
        android:text="Current Location Weather"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="329dp" />


</RelativeLayout>


